# serializer version: 1
# name: TestSoftDTWCall.test_call_default[event]
  -0.0074
# ---
# name: TestSoftDTWCall.test_call_default[interval]
  2.827
# ---
# name: TestSoftDTWCall.test_call_default[state]
  1.8674
# ---
# name: TestSoftDTWCall.test_call_with_gamma[event]
  13.7507
# ---
# name: TestSoftDTWCall.test_call_with_gamma[interval]
  5.7697
# ---
# name: TestSoftDTWCall.test_call_with_gamma[state]
  2.9307
# ---
